--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "google-adk>=1.17.0,<2.0.0",
     "absolufy-imports==0.3.1",
     "alembic==1.17.1",
     "annotated-doc==0.0.3",
@@ -28,7 +29,6 @@ dependencies = [
     "docstring-parser==0.17.0",
     "executing==2.2.1",
     "fastapi==0.120.4",
-    "google-adk==1.17.0",
     "google-api-core==2.28.1",
     "google-api-python-client==2.186.0",
     "google-auth==2.42.1",
@@ -47,7 +47,7 @@ dependencies = [
     "google-cloud-secret-manager==2.25.0",
     "google-cloud-spanner==3.59.0",
     "google-cloud-speech==2.34.0",
-    "google-cloud-storage==2.19.0",
+    "google-cloud-storage>=3.0.0,<4.0.0",
     "google-cloud-trace==1.17.0",
     "google-crc32c==1.7.1",
     "google-genai==1.47.0",
@@ -131,7 +131,7 @@ dependencies = [
     "sse-starlette==3.0.3",
     "stack-data==0.6.3",
     "starlette==0.49.1",
-    "tenacity==8.5.0",
+    "tenacity>=9.0.0,<10.0.0",
     "tornado==6.5.2",
     "traitlets==5.14.3",
     "typing-extensions==4.15.0",
@@ -150,5 +150,12 @@ dependencies = [
 [tool.uv]
 managed = true
 
+[tool.uv.sources]
+google-adk = { git = "https://github.com/google/adk-python.git", rev = "main" }
+
 [project.scripts]
 dev = "dev:main"
+
+[tool.setuptools]
+packages = ["orchestrator", "calendar_service", "google_docs_service"]
+
