--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
-    "google-adk>=1.17.0,<2.0.0",
+    "google-adk>=1.15.0,<2.0.0",
     "absolufy-imports==0.3.1",
     "alembic==1.17.1",
     "annotated-doc==0.0.3",
@@ -152,6 +152,11 @@ dependencies = [
     "pyqt6>=6.10.0",
     "pillow>=12.0.0",
     "pyside6>=6.10.0",
+    "asyncio>=4.0.0",
+    "logging>=0.4.9.6",
+    "dotenv>=0.9.9",
+    "anthropic>=0.72.0",
+    "docker>=7.1.0",
 ]
 
 
