--- a/pyproject.toml
+++ b/pyproject.toml
@@ -158,6 +158,8 @@ dependencies = [
     "anthropic>=0.72.0",
     "docker>=7.1.0",
     "pypdf>=6.1.3",
+    "flask>=3.1.2",
+    "elevenlabs>=2.22.0",
 ]
 
 
